--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <title>_titl - _desc</title>
 <link rel='shortcut icon' sizes='any' type='image/ico'
 	href='favicon.ico'>
-<link rel="stylesheet" href="styles/main.css">
+<link rel='stylesheet' href='styles/main.css'>
 <script type='text/javascript' src='wings.js'></script>
 <script type='text/javascript' src='scripts/easy.js'></script>
 <script type='text/javascript' src='scripts/num.js'></script>
@@ -13,8 +13,8 @@
 	<div id='content'>
 
 		<div class='space'></div>
-		<img src='images/logo.svg' width='300px'>
-		<h1 style="display: none">_titl</h1>
+		<img src='images/logo.svg' width='300px'> &nbsp;
+		<h1 style='display: inline-block;'>.js</h1>
 		<div class='space'></div>
 		<h2 class='col'>_desc</h2>
 		<div class='space'></div>
