--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,13 @@
 	href='favicon.ico'>
 <link rel='stylesheet' href='styles/main.css'>
 <script type='text/javascript' src='wings.js'></script>
-<script type='text/javascript' src='scripts/easy.js'></script>
+<script type='text/javascript' src='scripts/helpers/js.js'></script>
+<script type='text/javascript' src='scripts/helpers/easy.js'></script>
 <script type='text/javascript' src='main.js'></script>
-<script type='text/javascript' src='scripts/num.js'></script>
-<script type='text/javascript' src='scripts/body-parts.js'></script>
-<script type='text/javascript' src='scripts/rotating-image.js'></script>
-<script type='text/javascript' src='scripts/reactive-box.js'></script>
+<script type='text/javascript' src='scripts/helpers/num.js'></script>
+<script type='text/javascript' src='scripts/demos/body-parts.js'></script>
+<script type='text/javascript' src='scripts/demos/rotating-image.js'></script>
+<script type='text/javascript' src='scripts/demos/reactive-box.js'></script>
 </head>
 <body>
 	<div id='content'>
@@ -28,45 +29,45 @@
 
 		<h3 class='col'>Body parts</h3>
 		<div class='thin'></div>
-		<p class='col'>Example components Body, Eye(s) and Mouth - a few
+		<p class='col'>Demo components Body, Eye(s) and Mouth - a few
 			body parts - that can be mouse-dragged on view (try dragging them).</p>
 		<div class='thin'></div>
 		<canvas id='body-parts' width='300px' height='300px'>
 	</canvas>
 		<div class='thin'></div>
 		<p class='col'>
-			Inspect <a href='scripts/body-parts.js' target='_blank'>body-parts.js</a>
-			to see the example's code.
+			Inspect <a href='scripts/demos/body-parts.js' target='_blank'>body-parts.js</a>
+			to see the code.
 		</p>
 
 		<div class='space'></div>
 
 		<h3 class='col'>Rotating image</h3>
 		<div class='thin'></div>
-		<p class='col'>Example component RotatingImage, that loads an
+		<p class='col'>Demo component RotatingImage, that loads an
 			image and animates it to rotate.</p>
 		<div class='thin'></div>
 		<canvas id='rotating-image' width='300px' height='300px'>
 	</canvas>
 		<div class='thin'></div>
 		<p class='col'>
-			Inspect <a href='scripts/rotating-image.js' target='_blank'>rotating-image.js</a>
-			to see the example's code.
+			Inspect <a href='scripts/demos/rotating-image.js' target='_blank'>rotating-image.js</a>
+			to see the code.
 		</p>
 
 		<div class='space'></div>
 
 		<h3 class='col'>Reactive box</h3>
 		<div class='thin'></div>
-		<p class='col'>Example component ReactiveBox, that reacts when
+		<p class='col'>Demo component ReactiveBox, that reacts when
 			mouse is clicked on it (try clicking on it).</p>
 		<div class='thin'></div>
 		<canvas id='reactive-box' width='300px' height='300px'>
 			</canvas>
 		<div class='thin'></div>
 		<p class='col'>
-			Inspect <a href='scripts/reactive-box.js' target='_blank'>reactive-box.js</a>
-			to see the example's code.
+			Inspect <a href='scripts/demos/reactive-box.js' target='_blank'>reactive-box.js</a>
+			to see the code.
 		</p>
 		<div class='space'></div>
 
