--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 	<div id='content' style='display: none'>
 
 		<div class='space'></div>
-		<img src='images/logo.svg' width='300px'> &nbsp;
+		<img src='images/logo.svg' width='400px'>
 		<div class='space'></div>
 		<h2 class='col'>_desc</h2>
 		<div class='space'></div>
