--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <script type='text/javascript' src='scripts/helpers/easy.js'></script>
 <script type='text/javascript' src='main.js'></script>
 <script type='text/javascript' src='scripts/helpers/num.js'></script>
-<script type='text/javascript' src='scripts/demos/body-parts.js'></script>
+<script type='text/javascript' src='scripts/demos/moving-body.js'></script>
 <script type='text/javascript' src='scripts/demos/rotating-image.js'></script>
 <script type='text/javascript' src='scripts/demos/reactive-box.js'></script>
 <script type='text/javascript' src='scripts/demos/vertical-slider.js'></script>
@@ -22,23 +22,22 @@
 	<div id='content' style='display: none'>
 
 		<div class='space'></div>
-		<img src='images/logo.svg' width='400px' title='_titl'>
+		<img src='images/logo.svg' width='500px' title='_titl'>
 		<div class='space'></div>
 		<h2 class='col'>_desc</h2>
 		<div class='space'></div>
 
 
-		<h3 class='col'>Body parts</h3>
+		<h3 class='col'>Moving body</h3>
 		<div class='thin'></div>
-		<p class='col'>Demo components Body, Eye(s) and Mouth - a few
-			animated body parts - that can be mouse-dragged on view (try dragging
-			them).</p>
+		<p class='col'>Demo component MovingBody, the parts of which can
+			be mouse-dragged on view (try dragging them).</p>
 		<div class='thin'></div>
-		<canvas id='body-parts' width='300px' height='300px'>
+		<canvas id='moving-body' width='300px' height='300px'>
 	</canvas>
 		<div class='thin'></div>
 		<p class='col'>
-			Inspect <a href='scripts/demos/body-parts.js' target='_blank'>body-parts.js</a>
+			Inspect <a href='scripts/demos/moving-body.js' target='_blank'>moving-body.js</a>
 			to see the code.
 		</p>
 
