add cube 3d demo

--- a/src/index.html
+++ b/src/index.html
@@ -17,25 +17,36 @@
 <script type='text/javascript' src='scripts/demos/reactive-box.js'></script>
 <script type='text/javascript' src='scripts/demos/vertical-slider.js'></script>
 <script type='text/javascript' src='scripts/demos/movable-box.js'></script>
+<script type='text/javascript' src='scripts/helpers/tri.js'></script>
+<script type='text/javascript' src='scripts/demos/cube-3d.js'></script>
 </head>
 <body>
 	<div id='content' style='display: none'>
 
 		<div class='space'></div>
+
 		<img src='images/logo.svg' width='500px' title='_titl'>
-		<div class='space'></div>
-		<h2 class='col'>_desc</h2>
+
 		<div class='space'></div>
 
+		<h2 class='col'>_desc</h2>
+
+		<div class='space'></div>
 
 		<h3 class='col'>Moving body</h3>
+
 		<div class='thin'></div>
+
 		<p class='col'>Demo component MovingBody, the parts of which can
 			be mouse-dragged on view (try dragging them).</p>
+
 		<div class='thin'></div>
+
 		<canvas id='moving-body' width='300px' height='300px'>
 	</canvas>
+
 		<div class='thin'></div>
+
 		<p class='col'>
 			Inspect <a href='scripts/demos/moving-body.js' target='_blank'>moving-body.js</a>
 			to see the code.
@@ -44,13 +55,19 @@
 		<div class='space'></div>
 
 		<h3 class='col'>Rotating image</h3>
+
 		<div class='thin'></div>
+
 		<p class='col'>Demo component RotatingImage that loads an image
 			and animates it to rotate.</p>
+
 		<div class='thin'></div>
+
 		<canvas id='rotating-image' width='300px' height='300px'>
 	</canvas>
+
 		<div class='thin'></div>
+
 		<p class='col'>
 			Inspect <a href='scripts/demos/rotating-image.js' target='_blank'>rotating-image.js</a>
 			to see the code.
@@ -59,13 +76,19 @@
 		<div class='space'></div>
 
 		<h3 class='col'>Reactive box</h3>
+
 		<div class='thin'></div>
+
 		<p class='col'>Demo component ReactiveBox that reacts when mouse
 			is clicked on it (try it).</p>
+
 		<div class='thin'></div>
+
 		<canvas id='reactive-box' width='300px' height='300px'>
 			</canvas>
+
 		<div class='thin'></div>
+
 		<p class='col'>
 			Inspect <a href='scripts/demos/reactive-box.js' target='_blank'>reactive-box.js</a>
 			to see the code.
@@ -73,15 +96,20 @@
 
 		<div class='space'></div>
 
-
 		<h3 class='col'>Vertical Slider</h3>
+
 		<div class='thin'></div>
+
 		<p class='col'>Demo component VerticalSlider that shows its
 			current value (try it).</p>
+
 		<div class='thin'></div>
+
 		<canvas id='vertical-slider' width='300px' height='300px'>
 			</canvas>
+
 		<div class='thin'></div>
+
 		<p class='col'>
 			Inspect <a href='scripts/demos/vertical-slider.js' target='_blank'>vertical-slider.js</a>
 			to see the code.
@@ -89,16 +117,21 @@
 
 		<div class='space'></div>
 
-
 		<h3 class='col'>Movable Box</h3>
+
 		<div class='thin'></div>
+
 		<p class='col'>Demo component MovableBox that moves with the
 			keyboard: 'W' moves UP, 'S' moves DOWN, 'A' moves LEFT, and 'D' moves
 			RIGHT (try it).</p>
+
 		<div class='thin'></div>
+
 		<canvas id='movable-box' width='300px' height='300px'>
 			</canvas>
+
 		<div class='thin'></div>
+
 		<p class='col'>
 			Inspect <a href='scripts/demos/movable-box.js' target='_blank'>movable-box.js</a>
 			to see the code.
@@ -106,11 +139,35 @@
 
 		<div class='space'></div>
 
+		<h3 class='col'>Cube 3D</h3>
+
+		<div class='thin'></div>
+
+		<p class='col'>Demo component Cube3D, that renders a cube in 3D
+			and rotates it.</p>
+
+		<div class='thin'></div>
+
+		<canvas id='cube-3d' width='300px' height='300px'>
+			</canvas>
+
+		<div class='thin'></div>
+
+		<p class='col'>
+			Inspect <a href='scripts/demos/cube-3d.js' target='_blank'>cube-3d.js</a>
+			to see the code.
+		</p>
+
+		<div class='space'></div>
+
 		<img src='images/home.svg' width='16px'> <a
 			href='http://1nside0ut.com/WingsJS/' target='_blank'>http://1nside0ut.com/WingsJS/</a>
+
 		<div class='thin'></div>
+
 		<img src='images/github.png' width='16px'> <a
 			href='http://github.com/1nside0ut/WingsJS' target='_blank'>http://github.com/1nside0ut/WingsJS</a>
+
 		<div class='space'></div>
 	</div>
 </body>
