--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+<meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
+<meta content='utf-8' http-equiv='encoding'>
+<meta charset='utf-8' />
 <title>_titl - _desc</title>
 <link rel='shortcut icon' sizes='any' type='image/ico'
 	href='favicon.ico'>
