--- a/src/index.html
+++ b/src/index.html
@@ -156,12 +156,12 @@
 		<div class='space'></div>
 
 		<img src='images/home.svg' width='16px'> <a
-			href='http://1nside0ut.com/WingsJS/' target='_blank'>http://1nside0ut.com/WingsJS/</a>
+			href='http://1nside0ut.com/_nam.js/' target='_blank'>http://1nside0ut.com/_nam.js/</a>
 
 		<div class='thin'></div>
 
 		<img src='images/github.png' width='16px'> <a
-			href='http://github.com/1nside0ut/WingsJS' target='_blank'>http://github.com/1nside0ut/WingsJS</a>
+			href='http://github.com/1nside0ut/_nam.js' target='_blank'>http://github.com/1nside0ut/_nam.js</a>
 
 		<div class='space'></div>
 	</div>
