--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,11 @@
 
 		<img src='images/github.png' width='16px'> <a
 			href='http://github.com/1nside0ut/_nam-js' target='_blank'>http://github.com/1nside0ut/_nam-js</a>
+			
+		<div class='thin'></div>
+
+		<img src='images/npm.png' width='32px'> <a
+			href='http://www.npmjs.com/package/_nam-js' target='_blank'>http://www.npmjs.com/package/_nam-js</a>
 
 		<div class='space'></div>
 	</div>
