add build tool for cjs and mjs distributions; refactor rotating-cube demo; clean up files; adjust doc, html and package

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8" />
-	<title>Component-Oriented JavaScript UI framework for Canvas - Wings JS</title>
+	<title>Object-oriented Component-based UI JavaScript library for HTML Canvas (inspired by Java Swing)
+	</title>
 	<link rel="shortcut icon" sizes="any" type="image/ico" href="favicon.ico">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<header>
-		<img src="images/logo.svg" title="Wings JS">
+		<img src="images/logo.svg" title="Wings">
 
-		<h1>Wings JS</h1>
+		<h1>Wings</h1>
 
-		<p>Component-Oriented JavaScript UI framework for Canvas</p>
+		<p>Object-oriented Component-based UI JavaScript library for HTML Canvas (inspired by Java Swing)</p>
 
-		<p>v1.0.1</p>
+		<sup>1.0.2</sup>
 	</header>
 
 	<h2>Demos</h2>
@@ -30,7 +31,7 @@
 		<canvas id="draggable-body" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/draggable-body.js">code</a></p>
+		<p><a href="scripts/draggable-body.js">code</a></p>
 	</article>
 
 	<article>
@@ -41,7 +42,7 @@
 		<canvas id="rotating-image" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/rotating-image.js">code</a></p>
+		<p><a href="scripts/rotating-image.js">code</a></p>
 	</article>
 
 	<article>
@@ -52,7 +53,7 @@
 		<canvas id="reactive-box" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/reactive-box.js">code</a></p>
+		<p><a href="scripts/reactive-box.js">code</a></p>
 	</article>
 
 	<article>
@@ -63,7 +64,7 @@
 		<canvas id="vertical-slider" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/vertical-slider.js">code</a></p>
+		<p><a href="scripts/vertical-slider.js">code</a></p>
 	</article>
 
 	<article>
@@ -74,7 +75,7 @@
 		<canvas id="movable-box" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/movable-box.js">code</a></p>
+		<p><a href="scripts/movable-box.js">code</a></p>
 	</article>
 
 	<article>
@@ -85,7 +86,7 @@
 		<canvas id="rotating-cube" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/rotating-cube.js">code</a></p>
+		<p><a href="scripts/rotating-cube.js">code</a></p>
 	</article>
 
 	<article>
@@ -96,27 +97,28 @@
 		<canvas id="animated-gif" width="300px" height="300px">
 		</canvas>
 
-		<p><a href="demos/mouth-frames.js">code</a></p>
+		<p><a href="scripts/mouth-frames.js">code</a></p>
 	</article>
 
 	<footer>
-		<p><img class="icon" src="images/github.png"> <a
-			href="https://github.com/manuelbarzi/wings-js">https://github.com/manuelbarzi/wings-js</a></p>
-
-		<p><img class="icon" src="images/npm.png"> <a
-			href="https://www.npmjs.com/package/wings-js">https://www.npmjs.com/package/wings-js</a></p>
+		<p>
+			<a href="https://github.com/b00tc4mp/wings" title="github repository"><img class="icon"
+					src="images/github.png"></a>
+			<a href="https://www.npmjs.com/package/@b00tc4mp/wings" title="npm package"><img class="icon"
+					src="images/npm.png"></a>
+		</p>
 	</footer>
 
 	<script src="libs/tri.js"></script>
 	<script src="wings.js"></script>
 
-	<script src="demos/draggable-body.js"></script>
-	<script src="demos/rotating-image.js"></script>
-	<script src="demos/reactive-box.js"></script>
-	<script src="demos/vertical-slider.js"></script>
-	<script src="demos/movable-box.js"></script>
-	<script src="demos/rotating-cube.js"></script>
-	<script src="demos/mouth-frames.js"></script>
+	<script src="scripts/draggable-body.js"></script>
+	<script src="scripts/rotating-image.js"></script>
+	<script src="scripts/reactive-box.js"></script>
+	<script src="scripts/vertical-slider.js"></script>
+	<script src="scripts/movable-box.js"></script>
+	<script src="scripts/rotating-cube.js"></script>
+	<script src="scripts/mouth-frames.js"></script>
 </body>
 
 </html>
