prevent default mouse down behavior (to avoid involuntary selections of other html ele ments; text elements); adjust build tool; update doc, package and page (add demo project link)

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 		<p>Object-oriented Component-based UI JavaScript library for HTML Canvas (inspired by Java Swing)</p>
 
-		<sup>1.1.0</sup>
+		<sup>1.1.1</sup>
 	</header>
 
 	<main>
 		<h2>Intallation</h2>
 
-		<pre><code class="language-sh">$ npm i @b00tc4mp/wings --hello</code></pre>
+		<pre><code class="language-sh">$ npm i @b00tc4mp/wings</code></pre>
 
 		<h2>Usage (example)</h2>
 
@@ -134,6 +134,13 @@ saluter3.y = (view.height * 5 / 3 - saluter3.height) / 2
 view.add(saluter3)
 
 // and that's it</code></pre>
+
+		<h2>Demo project</h2>
+
+		<p>
+			Check out this <a href="https://github.com/b00tc4mp/wings-demo" title="github demo repository"
+				target="_blank">repository</a> 👀
+		</p>
 
 		<h2>More examples</h2>
 
