set package version next to logo in page

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <body>
 	<header>
-		<img src="images/logo.svg" title="Wings">
+		<p>
+			<img src="images/logo.svg" title="Wings"> <sub>1.1.1</sub>
+		</p>
 
 		<h1>Wings</h1>
 
 		<p>Object-oriented Component-based UI JavaScript library for HTML Canvas (inspired by Java Swing)</p>
-
-		<sup>1.1.1</sup>
 	</header>
 
 	<main>
